src/test/ui/parser/issue-20616-7.stderr
error: expected one of `>`, a const expression, lifetime, or type, found `,`
  --> $DIR/issue-20616-7.rs:28:22
   |
LL | type Type_7 = Box<(),,>;
   |                      ^ expected one of `>`, a const expression, lifetime, or type

error: aborting due to previous error

